crates/biome_html_parser/tests/html_specs/ok/svelte/each_as_in_identifier.svelte
{#each classes as class}
  <div class={class}></div>
{/each}

{#each async_tasks as task}
  <div>{task}</div>
{/each}
