crates/biome_html_parser/tests/html_specs/error/svelte/each_missing_binding.svelte
{#each items as }
  <div>content</div>
{/each}
